--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.1",
@@ -17,18 +18,22 @@
     "@sanity/vision": "^3.70.0",
     "@shadcn/ui": "^0.0.4",
     "aos": "^2.3.4",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.468.0",
     "next": "^14.2.23",
     "next-sanity": "^9.8.38",
+    "next-themes": "^0.4.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
     "react-slick": "^0.30.2",
     "sanity": "^3.70.0",
     "slick-carousel": "^1.8.1",
+    "sonner": "^1.7.4",
     "styled-components": "^6.1.14",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
